--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
     </div>
 </div>
 
-<h2 class="header-light regular-pad">Object Oriented Analysis & Design</h2>
+<center><h2 class="header-light regular-pad">Object Oriented Analysis & Design</h2></center>
 
 <div class="container">
     <div class="row">
@@ -32,7 +32,7 @@ layout: default
         </div>
     </div>
     <hr>
-    <img src="{{ "/assets/img/dpwords.png" | relative_url }}" alt="Design Pattern Words" class="img-responsive">
+<center><img src="{{ "/assets/img/dpwords.png" | relative_url }}" alt="Design Pattern Words" class="img-responsive"></center>
     <hr>
     <div class="row">
         <div class="col-sm-4">
