--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
         <p>Design Patterns are well developed solutions to commonly occuring situations in object oriented programming 
             and design.
         </p>
-        <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | relative_url }}" role="button">Content</a></p>
+        <p><a class="btn btn-primary btn-lg" href="{{ "/docs/overview/" | relative_url }}" role="button">Content</a></p>
     </div>
 </div>
 
